--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@mantine/core": "7.1.5",
     "@mantine/hooks": "7.1.5",
     "@mantine/vanilla-extract": "7.1.5",
-    "@vanilla-extract/integration": "6.2.2",
     "@vanilla-extract/css": "1.13.0",
     "@vanilla-extract/dynamic": "2.0.3",
+    "@vanilla-extract/integration": "6.2.2",
     "@vanilla-extract/recipes": "0.5.0",
     "@vanilla-extract/vite-plugin": "3.9.0",
     "clsx": "2.0.0",
@@ -38,5 +38,10 @@
     "typescript": "5.2.2",
     "typescript-plugin-css-modules": "5.0.2",
     "vite": "4.5.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@vanilla-extract/vite-plugin@3.9.0": "patches/@vanilla-extract__vite-plugin@3.9.0.patch"
+    }
   }
 }
